--- a/README
+++ b/README
@@ -3,5 +3,5 @@ SEMANTIC WEB-BASED INTELLIGRNT TECHNICAL HELPDESK
 
 @@@@@@@@  Under Construction @@@@@@@@
 
-You can contact me by mail: karthikprasad@engineer.com.
-You can also connect with me on Linkedin: www.linkedin.com/in/prasadkarthik
+You can contact us by mail: aparna.nagarajan26@gmail.com, karthikprasad@engineer.com.
+You can also connect with me on Linkedin: www.linkedin.com/in/aparnanagarajan
